--- a/TestConnectionsApp/Pages/Shared/_Layout.cshtml
+++ b/TestConnectionsApp/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/AzureSQLTest">SQL Test</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/AzureSQLTest">Azure SQL Test</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/AzureRedisTest">Azure Redis Test</a>
                         </li>
                     </ul>
                 </div>
